Add endpoints to manage discountPolicy
